--- a/front/package.json
+++ b/front/package.json
@@ -54,6 +54,7 @@
     "prettier": "^3.1.0",
     "prettier-plugin-css-order": "^2.0.1",
     "prettier-plugin-svelte": "^3.1.2",
+    "rollup-plugin-visualizer": "^5.10.0",
     "slugger": "^1.0.1",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
