chore(front): refactor category route with [...spread] (#1061)
Removes a little overhead and a 301 redirect by using spread route for category listing pages.

--- a/.github/workflows/bd-fe.yml
+++ b/.github/workflows/bd-fe.yml
@@ -1,4 +1,4 @@
-name: 🚀 Build & Deploy 
+name: 🚀 Build & Deploy
 run-name: "🚀 ${{ inputs.env == 'prd' && 'PRD' || 'STG' }} - Build & Deploy - ${{ github.event_name == 'pull_request' && format('PR #{0}: {1}', github.event.pull_request.number, github.event.pull_request.title) || format('latest {0}', github.ref_name) }}"
 
 on:
@@ -6,7 +6,7 @@ on:
   workflow_call:
     inputs:
       env:
-        description: 'Target deployment environment.'
+        description: "Target deployment environment."
         type: string
         required: true
     secrets:
@@ -86,21 +86,25 @@ jobs:
       DEPLOY_ENV: "${{ vars.ENV_NAME }}"
 
     steps:
-      - name: 🤿 Set Vars
-        id: vars
-        env:
-          name: "${{ env.BRANCH_NAME }}"
-          environment: ${{ inputs.env }}
-        run: |
-          echo "RELEASE_NAME=${environment}-${name/\//-}" >> $GITHUB_ENV
-          echo "DIST=$(date +%y%m%d-%H%M%S)" >> $GITHUB_ENV
-
       - name: 𐂷 Checkout
         uses: actions/checkout@v4
         with:
           repository: dgrebb/dgrebb.com
           ref: ${{ github.ref }}
           token: ${{ github.token }}
+
+      - name: 🤿 Set Vars
+        id: vars
+        env:
+          name: "${{ env.BRANCH_NAME }}"
+          RELEASE_SUFFIX: ${{ contains(github.ref, 'main') && '' || contains(github.ref, 'release') && '-RC' || '-alpha.' }}
+        run: |
+          if [ ${{ inputs.env }} == 'prd' ]; then
+            echo "RELEASE_NAME=front@$(cat front/package.json | jq -r '.version')${RELEASE_SUFFIX}" >> $GITHUB_ENV
+          else
+            echo "RELEASE_NAME=front@$(cat front/package.json | jq -r '.version')${RELEASE_SUFFIX}${name/\//-}" >> $GITHUB_ENV
+          fi
+          echo "DIST=$(date +%y%m%d-%H%M%S)" >> $GITHUB_ENV
 
       - name: 📐 Set Environment
         env:
@@ -128,6 +132,7 @@ jobs:
           echo PUBLIC_API_PATH_POSITIONS='${{ secrets.PUBLIC_API_PATH_POSITIONS }}' >> front/.env
           echo API_KEY=${{ secrets.API_KEY }} >> front/.env
           echo PUBLIC_SENTRY_DSN=${{ secrets.PUBLIC_SENTRY_DSN }} >> front/.env
+          echo PUBLIC_RELEASE="${RELEASE_NAME}" >> front/.env
           echo PUBLIC_ENV=${{ secrets.PUBLIC_ENV }} >> front/.env
           cat front/.env
 
@@ -144,21 +149,17 @@ jobs:
       - name: ↻ Build
         run: |
           cd front
-          if [ ${{ inputs.env }} == 'prd' ]; then 
-            SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }} \
-            DEPLOY_ENV=$DEPLOY_ENV \
-            UPLOAD_SOURCEMAPS=true \
-            RELEASE_NAME=${{ env.RELEASE_NAME }} \
-            DIST=${{ env.DIST }} \
-            npm run build
+          if [ ${{ inputs.env }} == 'prd' ]; then
+            e=p
           else
-            SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }} \
-            DEPLOY_ENV=$DEPLOY_ENV \
-            UPLOAD_SOURCEMAPS=true \
-            RELEASE_NAME=${{ env.RELEASE_NAME }} \
-            DIST=${{ env.DIST }} \
-            npm run build.s
+            e=s
           fi
+          SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }} \
+          DEPLOY_ENV=$DEPLOY_ENV \
+          UPLOAD_SOURCEMAPS=true \
+          RELEASE_NAME=${{ env.RELEASE_NAME }} \
+          DIST=${{ env.DIST }} \
+            npm run build.${e}
 
       - name: 🤖 Robots
         if: ${{ inputs.env == 'prd' }}
