--- a/front/package.json
+++ b/front/package.json
@@ -37,7 +37,6 @@
     "@iconify-json/simple-icons": "^1.1.82",
     "@iconify-json/typcn": "^1.1.8",
     "@playwright/test": "^1.40.1",
-    "@sentry/vite-plugin": "^2.10.2",
     "@sveltejs/adapter-auto": "^2.1.1",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.27.7",
@@ -54,6 +53,7 @@
     "prettier": "^3.1.0",
     "prettier-plugin-css-order": "^2.0.1",
     "prettier-plugin-svelte": "^3.1.2",
+    "rollup-plugin-bundle-stats": "^4.8.3",
     "rollup-plugin-visualizer": "^5.10.0",
     "slugger": "^1.0.1",
     "svelte": "^4.2.8",
@@ -66,9 +66,5 @@
     "vite": "^4.5.1",
     "vitest": "^1.0.1"
   },
-  "type": "module",
-  "dependencies": {
-    "@sentry/browser": "^7.86.0",
-    "rollup-plugin-bundle-stats": "^4.8.3"
-  }
+  "type": "module"
 }
