--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,8 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
     "prettier": "prettier",
+    "baseline": "npm run bundle-stats --baseline --baseline-filepath=.report/__fixtures__/bundlestats-baseline.json",
+    "bundle-stats": "node ./node_modules/rollup-plugin-bundle-stats/lib/index.js",
     "lint": "prettier --check . && eslint .",
     "dev.l": "vite --config vite.local.config.js dev",
     "dev.s": "vite --config vite.local.config.js dev",
@@ -17,9 +19,9 @@
     "build": "vite --config vite.config.js build",
     "preview": "vite --config vite.config.js preview",
     "preview.local": "vite --config vite.local.config.js preview",
-    "postbuild.l": "npx svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -i '**/cv/**' -t --attribution=false --domain https://local.dgrebb.com",
-    "postbuild.s": "npx svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -i '**/cv/**' -t --attribution=false --domain https://stg.dgrebb.com",
-    "postbuild": "npx svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -i '**/cv/**' -t --attribution=false --domain https://www.dgrebb.com",
+    "postbuild.l": "npx -y -q svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -i '**/cv/**' -t --attribution=false --domain https://local.dgrebb.com",
+    "postbuild.s": "npx -y -q svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -i '**/cv/**' -t --attribution=false --domain https://stg.dgrebb.com",
+    "postbuild": "npx -y -q svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -i '**/cv/**' -t --attribution=false --domain https://www.dgrebb.com",
     "test": "npm run test:integration && npm run test:unit",
     "format": "prettier --write .",
     "test:integration": "playwright test",
@@ -64,6 +66,7 @@
     "typescript": "^5.3.3",
     "unplugin-icons": "^0.18.1",
     "vite": "^4.5.1",
+    "vite-plugin-progress": "^0.0.7",
     "vitest": "^1.0.1"
   },
   "type": "module"
