feat(front): migrates to SvelteKit 2 (#1072)
Closes: #1072

--- a/front/jsconfig.json
+++ b/front/jsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
-    "baseUrl": ".",
     "allowJs": true,
     "checkJs": false,
     "esModuleInterop": true,
@@ -10,19 +9,6 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "moduleResolution": "bundler",
-    "paths": {
-      "@api": ["./src/lib/api"],
-      "@components": ["./src/lib/components"],
-      "@components/*": ["./src/lib/components/*"],
-      "@layout": ["./src/lib/layout"],
-      "@layout/*": ["./src/lib/layout/*"],
-      "@store": ["./src/lib/store"],
-      "@styles": ["./src/lib/styles"],
-      "@utils": ["./src/lib/_utils"],
-      "@shape-shifters": ["./src/lib/_utils/shape-shifters"],
-      "$lib": ["./src/lib"],
-      "$lib/*": ["./src/lib/*"]
-    }
+    "moduleResolution": "bundler"
   }
 }
