--- a/front/package.json
+++ b/front/package.json
@@ -6,8 +6,8 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
     "prettier": "prettier",
-    "baseline": "npm run bundle-stats --baseline --baseline-filepath=.report/__fixtures__/bundlestats-baseline.json",
-    "bundle-stats": "node ./node_modules/rollup-plugin-bundle-stats/lib/index.js",
+    "baseline": "mv -f ./.report/bundle/current/* ./.report/bundle/previous",
+    "bundle-stats": "bundle-stats",
     "lint": "prettier --check . && eslint .",
     "dev.l": "vite --config vite.local.config.js dev",
     "dev.s": "vite --config vite.local.config.js dev",
@@ -31,34 +31,34 @@
     "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@accuser/svelte-plausible-analytics": "github:dgrebb/svelte-plausible-analytics#release/v0.6.0",
-    "@iconify-json/entypo-social": "^1.1.7",
-    "@iconify-json/gg": "^1.1.8",
-    "@iconify-json/icomoon-free": "^1.1.7",
-    "@iconify-json/icon-park-outline": "^1.1.14",
-    "@iconify-json/mdi": "^1.1.59",
-    "@iconify-json/ph": "^1.1.8",
-    "@iconify-json/simple-icons": "^1.1.82",
-    "@iconify-json/typcn": "^1.1.8",
+    "@accuser/svelte-plausible-analytics": "github:dgrebb/svelte-plausible-analytics#v1.0.0",
+    "@iconify-json/entypo-social": "^1.1.8",
+    "@iconify-json/gg": "^1.1.9",
+    "@iconify-json/icomoon-free": "^1.1.8",
+    "@iconify-json/icon-park-outline": "^1.1.15",
+    "@iconify-json/mdi": "^1.1.62",
+    "@iconify-json/ph": "^1.1.9",
+    "@iconify-json/simple-icons": "^1.1.84",
+    "@iconify-json/typcn": "^1.1.9",
     "@playwright/test": "^1.40.1",
-    "@sveltejs/adapter-auto": "^2.1.1",
-    "@sveltejs/adapter-static": "^2.0.3",
-    "@sveltejs/kit": "^1.27.7",
+    "@sveltejs/adapter-static": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
     "html-minifier-terser": "^7.2.0",
-    "marked": "^10.0.0",
+    "marked": "^11.1.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.32",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^12.0.1",
-    "prettier": "^3.1.0",
+    "prettier": "^3.1.1",
     "prettier-plugin-css-order": "^2.0.1",
     "prettier-plugin-svelte": "^3.1.2",
     "rollup-plugin-bundle-stats": "^4.8.3",
-    "rollup-plugin-visualizer": "^5.10.0",
+    "rollup-plugin-visualizer": "^5.11.0",
     "slugger": "^1.0.1",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
@@ -67,9 +67,9 @@
     "svelte-sitemap": "^2.6.0",
     "typescript": "^5.3.3",
     "unplugin-icons": "^0.18.1",
-    "vite": "^4.5.1",
+    "vite": "^5.0.9",
     "vite-plugin-progress": "^0.0.7",
-    "vitest": "^1.0.1"
+    "vitest": "^1.0.4"
   },
   "type": "module"
 }
