feat(back): adds links cv boolean and experiences story fields (#1050)

--- a/back/config/sync/core-store.plugin_content_manager_configuration_components##general.links.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_components##general.links.json
@@ -64,7 +64,7 @@
       },
       "cv": {
         "edit": {
-          "label": "Show on CV",
+          "label": "cv",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -97,11 +97,11 @@
         ],
         [
           {
-            "name": "cv",
+            "name": "icon",
             "size": 4
           },
           {
-            "name": "icon",
+            "name": "cv",
             "size": 4
           }
         ]
