--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##experience.experience.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##experience.experience.json
@@ -20,6 +20,20 @@
           "sortable": true
         }
       },
+      "title": {
+        "edit": {
+          "label": "Title",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "title",
+          "searchable": true,
+          "sortable": true
+        }
+      },
       "name": {
         "edit": {
           "label": "Name",
@@ -48,23 +62,9 @@
           "sortable": true
         }
       },
-      "title": {
-        "edit": {
-          "label": "Title",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "title",
-          "searchable": true,
-          "sortable": true
-        }
-      },
       "startDate": {
         "edit": {
-          "label": "startDate",
+          "label": "Start",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -78,7 +78,7 @@
       },
       "endDate": {
         "edit": {
-          "label": "endDate",
+          "label": "End",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -92,7 +92,7 @@
       },
       "summary": {
         "edit": {
-          "label": "summary",
+          "label": "Summary",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -106,7 +106,7 @@
       },
       "hero": {
         "edit": {
-          "label": "hero",
+          "label": "Hero",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -120,7 +120,7 @@
       },
       "organizations": {
         "edit": {
-          "label": "organizations",
+          "label": "Organizations",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -135,7 +135,7 @@
       },
       "projects": {
         "edit": {
-          "label": "projects",
+          "label": "Projects",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -150,7 +150,7 @@
       },
       "skills": {
         "edit": {
-          "label": "skills",
+          "label": "Skills",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -165,7 +165,7 @@
       },
       "industries": {
         "edit": {
-          "label": "industries",
+          "label": "Industries",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -180,7 +180,7 @@
       },
       "awards": {
         "edit": {
-          "label": "awards",
+          "label": "Awards",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -195,7 +195,7 @@
       },
       "accomplishments": {
         "edit": {
-          "label": "accomplishments",
+          "label": "Accomplishments",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -209,7 +209,7 @@
       },
       "responsibilities": {
         "edit": {
-          "label": "responsibilities",
+          "label": "Responsibilities",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -223,7 +223,7 @@
       },
       "wisdom": {
         "edit": {
-          "label": "wisdom",
+          "label": "Wisdom",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -237,7 +237,7 @@
       },
       "body": {
         "edit": {
-          "label": "body",
+          "label": "Body",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -251,7 +251,7 @@
       },
       "seo": {
         "edit": {
-          "label": "seo",
+          "label": "SEO",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -265,7 +265,7 @@
       },
       "certifications": {
         "edit": {
-          "label": "certifications",
+          "label": "Certifications",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -276,6 +276,20 @@
           "label": "certifications",
           "searchable": false,
           "sortable": false
+        }
+      },
+      "story": {
+        "edit": {
+          "label": "Story",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "story",
+          "searchable": true,
+          "sortable": true
         }
       },
       "createdAt": {
@@ -361,12 +375,16 @@
           {
             "name": "endDate",
             "size": 4
+          },
+          {
+            "name": "hero",
+            "size": 4
           }
         ],
         [
           {
-            "name": "hero",
-            "size": 4
+            "name": "story",
+            "size": 6
           },
           {
             "name": "summary",
