wip(back): adjusts strapi dashboard plugin name

--- a/back/src/plugins/dashboard/package.json
+++ b/back/src/plugins/dashboard/package.json
@@ -4,13 +4,8 @@
   "description": "This is the description of the plugin.",
   "license": "MIT",
   "author": {
-    "name": "A Strapi developer"
+    "name": "dgrebb"
   },
-  "maintainers": [
-    {
-      "name": "A Strapi developer"
-    }
-  ],
   "dependencies": {
     "@strapi/design-system": "^1.6.3",
     "@strapi/helper-plugin": "^4.6.0",
