--- a/front/package.json
+++ b/front/package.json
@@ -62,7 +62,7 @@
     "slugger": "^1.0.1",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
-    "svelte-highlight": "^7.4.2",
+    "svelte-highlight": "7.4.2",
     "svelte-meta-tags": "^3.1.0",
     "svelte-sitemap": "^2.6.0",
     "typescript": "^5.3.3",
