--- a/front/package.json
+++ b/front/package.json
@@ -50,9 +50,11 @@
     "eslint-plugin-svelte": "^2.35.1",
     "html-minifier-terser": "^7.2.0",
     "marked": "^11.1.0",
+    "marked-alert": "^2.0.1",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.32",
     "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.1",
     "postcss-nesting": "^12.0.1",
     "prettier": "^3.1.1",
     "prettier-plugin-css-order": "^2.0.1",
