feat(front): adds marked parser for image alignment (#1080)
Closes: #1080

--- a/back/config/sync/core-store.plugin_content_manager_configuration_components##posts.text.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_components##posts.text.json
@@ -22,8 +22,8 @@
       },
       "text": {
         "edit": {
-          "label": "text",
-          "description": "",
+          "label": "Text",
+          "description": "Image alignment: ![image.png { align=right } ](http://lexample.com/image.png)",
           "placeholder": "",
           "visible": true,
           "editable": true
