--- a/.github/workflows/bdt-fe--release.yml
+++ b/.github/workflows/bdt-fe--release.yml
@@ -57,34 +57,34 @@ jobs:
       DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
       GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
 
-  # backstop:
-  #   name: 👀
-  #   needs: build_deploy
-  #   uses: ./.github/workflows/test-backstop.yml
-  #   secrets:
-  #     GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
-  #     AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
-  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #     AWS_REGION: ${{ secrets.AWS_REGION }}
-  #     REPORTS_DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
+  backstop:
+    name: 👀
+    needs: build_deploy
+    uses: ./.github/workflows/test-backstop.yml
+    secrets:
+      GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
+      AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      REPORTS_DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
 
-  # lighthouse:
-  #   name: 🕯️
-  #   needs: build_deploy
-  #   uses: ./.github/workflows/test-lighthouse.yml
-  #   secrets:
-  #     AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
-  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #     AWS_REGION: ${{ secrets.AWS_REGION }}
-  #     REPORTS_DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
-  #     GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
+  lighthouse:
+    name: 🕯️
+    needs: build_deploy
+    uses: ./.github/workflows/test-lighthouse.yml
+    secrets:
+      AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      REPORTS_DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
+      GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
 
-  # pagespeed:
-  #   name: 📈
-  #   needs: build_deploy
-  #   uses: ./.github/workflows/test-psi.yml
-  #   secrets:
-  #     PSI_APIKEY: ${{ secrets.PSI_APIKEY }}
-  #     GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
+  pagespeed:
+    name: 📈
+    needs: build_deploy
+    uses: ./.github/workflows/test-psi.yml
+    secrets:
+      PSI_APIKEY: ${{ secrets.PSI_APIKEY }}
+      GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
