--- a/.github/workflows/bdt-fe--release.yml
+++ b/.github/workflows/bdt-fe--release.yml
@@ -23,6 +23,8 @@ jobs:
   lint:
     name: 💨
     uses: ./.github/workflows/lint.yml
+    with:
+      env: ${{ github.event.inputs.env }}
 
   build_deploy:
     name: 🚀
@@ -61,6 +63,8 @@ jobs:
     name: 👀
     needs: build_deploy
     uses: ./.github/workflows/test-backstop.yml
+    with:
+      env: ${{ github.event.inputs.env }}
     secrets:
       GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
       AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
@@ -73,6 +77,8 @@ jobs:
     name: 🕯️
     needs: build_deploy
     uses: ./.github/workflows/test-lighthouse.yml
+    with:
+      env: ${{ github.event.inputs.env }}
     secrets:
       AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -85,6 +91,8 @@ jobs:
     name: 📈
     needs: build_deploy
     uses: ./.github/workflows/test-psi.yml
+    with:
+      env: ${{ github.event.inputs.env }}
     secrets:
       PSI_APIKEY: ${{ secrets.PSI_APIKEY }}
       GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
