--- a/.github/workflows/bdt-fe.yml
+++ b/.github/workflows/bdt-fe.yml
@@ -24,6 +24,8 @@ jobs:
   lint:
     name: 💨
     uses: ./.github/workflows/lint.yml
+    with:
+      env: ${{ github.ref_name == 'main' && 'prd' || 'stg' }}
 
   build_deploy:
     name: 🚀
@@ -62,6 +64,8 @@ jobs:
     name: 👀
     needs: build_deploy
     uses: ./.github/workflows/test-backstop.yml
+    with:
+      env: ${{ github.ref_name == 'main' && 'prd' || 'stg' }}
     secrets:
       GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
       AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
@@ -74,6 +78,8 @@ jobs:
     name: 🕯️
     needs: build_deploy
     uses: ./.github/workflows/test-lighthouse.yml
+    with:
+      env: ${{ github.ref_name == 'main' && 'prd' || 'stg' }}
     secrets:
       AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -86,6 +92,8 @@ jobs:
     name: 📈
     needs: build_deploy
     uses: ./.github/workflows/test-psi.yml
+    with:
+      env: ${{ github.ref_name == 'main' && 'prd' || 'stg' }}
     secrets:
       PSI_APIKEY: ${{ secrets.PSI_APIKEY }}
       GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
