--- a/.github/workflows/test-psi.yml
+++ b/.github/workflows/test-psi.yml
@@ -4,6 +4,11 @@ run-name: "${{ github.ref_name == 'main' && 'PRD' || 'STG' }} - PSI Run for ${{ 
 on:
   workflow_dispatch:
   workflow_call:
+    inputs:
+      env:
+        description: "Target deployment environment."
+        type: string
+        required: true
     secrets:
       PSI_APIKEY:
         required: true
@@ -39,7 +44,7 @@ jobs:
       - name: ⬢ Setup Node & Cache
         uses: actions/setup-node@v4
         with:
-          node-version: "20.9.0"
+          node-version: "20.x"
           cache: "npm"
           cache-dependency-path: |
             _ci/perf/package.json
