--- a/.github/workflows/test-lighthouse.yml
+++ b/.github/workflows/test-lighthouse.yml
@@ -27,9 +27,7 @@ jobs:
   lighthouse:
     name: ⛵️ Lighthouse
     runs-on: ubuntu-latest
-
-    environment:
-      name: ${{ inputs.env }}
+    environment: ${{ inputs.env }}
 
     steps:
       - name: 𐂷 Checkout
