--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,8 +17,7 @@ jobs:
   lint:
     name: ≅ Lint
     runs-on: ubuntu-latest
-    environment:
-      name: ${{ inputs.env }}
+    environment: ${{ inputs.env }}
 
     steps:
       - name: 𐂷 Checkout
