--- a/.github/workflows/bdt-fe--release.yml
+++ b/.github/workflows/bdt-fe--release.yml
@@ -24,14 +24,14 @@ jobs:
     name: 💨
     uses: ./.github/workflows/lint.yml
     with:
-      env: ${{ github.event.inputs.env }}
+      env: ${{ inputs.env }}
 
   build_deploy:
     name: 🚀
     needs: lint
     uses: ./.github/workflows/bd-fe.yml
     with:
-      env: ${{ github.event.inputs.env }}
+      env: ${{ inputs.env }}
     secrets:
       AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -64,7 +64,7 @@ jobs:
     needs: build_deploy
     uses: ./.github/workflows/test-backstop.yml
     with:
-      env: ${{ github.event.inputs.env }}
+      env: ${{ inputs.env }}
     secrets:
       GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
       AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
@@ -78,7 +78,7 @@ jobs:
     needs: build_deploy
     uses: ./.github/workflows/test-lighthouse.yml
     with:
-      env: ${{ github.event.inputs.env }}
+      env: ${{ inputs.env }}
     secrets:
       AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -92,7 +92,7 @@ jobs:
     needs: build_deploy
     uses: ./.github/workflows/test-psi.yml
     with:
-      env: ${{ github.event.inputs.env }}
+      env: ${{ inputs.env }}
     secrets:
       PSI_APIKEY: ${{ secrets.PSI_APIKEY }}
       GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
