--- a/.github/workflows/test-lighthouse.yml
+++ b/.github/workflows/test-lighthouse.yml
@@ -27,7 +27,10 @@ jobs:
   lighthouse:
     name: ⛵️ Lighthouse
     runs-on: ubuntu-latest
-    environment: ${{ inputs.env }}
+
+    environment:
+      name: ${{ inputs.env }}
+      url: "https://${{ vars.WWW_DOMAIN }}"
 
     steps:
       - name: 𐂷 Checkout
