--- a/.github/workflows/test-psi.yml
+++ b/.github/workflows/test-psi.yml
@@ -26,7 +26,9 @@ jobs:
   psi:
     name: 📊 Page Speed Insights
     runs-on: ubuntu-latest
-    environment: ${{ inputs.env }}
+    environment:
+      name: ${{ inputs.env }}
+      url: "https://${{ vars.WWW_DOMAIN }}"
 
     steps:
       - name: 𐂷 Checkout
